frs-banking/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <description>A money transfer from a Bank_Account__c to an external core account. State machine: Requested → Completed | Failed. Idempotency_Key__c is unique (double-submit safe). The outbound call runs async (never in a trigger) via the platform-core framework.</description>
    <label>Transfer</label>
    <pluralLabel>Transfers</pluralLabel>
    <nameField>
        <label>Transfer Name</label>
        <type>AutoNumber</type>
        <displayFormat>TR-{00000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>