frs-banking/main/default/objects/Transfer__c/fields/Core_Transfer_Id__c.field-meta.xml
<CustomField>
    <fullName>Core_Transfer_Id__c</fullName>
    <label>Core Transfer Id</label>
    <type>Text</type>
    <length>64</length>
    <description>Id returned by the core-banking system on success.</description>
</CustomField>