frs-banking/main/default/objects/Transfer__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <type>Text</type>
    <length>255</length>
    <description>Ties the transfer to its Integration_Log__c / Dead_Letter__c rows.</description>
</CustomField>