frs-banking/main/default/objects/Transfer__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <type>Text</type>
    <length>3</length>
    <description>ISO 4217 (e.g. USD).</description>
</CustomField>