frs-banking/main/default/objects/Transfer__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>