frs-banking/main/default/objects/Transfer__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <label>From Account</label>
    <type>Lookup</type>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
</CustomField>