frs-banking/main/default/objects/Transfer__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <label>Idempotency Key</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Unique — the DB-level guard against double-submit. A second transfer with the same key cannot be inserted.</description>
</CustomField>