frs-banking/main/default/objects/Transfer__c/fields/To_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>To_Account_Id__c</fullName>
    <label>To Account Id</label>
    <type>Text</type>
    <length>64</length>
    <description>External core-banking account id of the destination.</description>
</CustomField>